--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,11 @@ services:
   - type: web
     name: pool-calculator
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn src.web.app:app
+    buildCommand: pip install -r requirements_web.txt
+    startCommand: gunicorn --bind 0.0.0.0:$PORT src.web.app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
+      - key: PORT
+        value: 10000
     autoDeploy: true
