--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Flask>=2.0.0
+Flask==3.0.0
 Flask-WTF>=1.0.0
 WTForms>=3.0.0
-gunicorn>=20.1.0
-pandas>=1.5.0
+gunicorn==21.2.0
+pandas==2.1.3
 openpyxl>=3.0.10
-reportlab>=3.6.12
+reportlab==4.0.7
 numpy>=1.23.0
 pillow>=9.3.0
-xlsxwriter>=3.0.0
+XlsxWriter==3.1.9
