--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: pool-calculator
     env: python
     buildCommand: pip install -r requirements_web.txt
-    startCommand: gunicorn wsgi:app
+    startCommand: gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
