--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,9 @@ services:
   - type: web
     name: pool-calculator
     env: python
-    buildCommand: pip install -r requirements_web.txt
+    buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
-      - key: PORT
-        value: 10000
     autoDeploy: true
