--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,15 @@ services:
   - type: web
     name: pool-calculator
     env: python
+    region: frankfurt
+    plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
+      - key: FLASK_APP
+        value: app.py
+      - key: FLASK_ENV
+        value: production
     autoDeploy: true
